// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LazyWebpPicture should render an picture with a src 1`] = `
<picture>
  <source
    data-srcset="/image.jpeg.webp"
    type="image/webp"
  />
  <img
    className="lazy"
    data-src="/image.jpeg"
  />
</picture>
`;

exports[`LazyWebpPicture should render an picture with a webp src 1`] = `
<picture>
  <source
    data-srcset="/image.webp"
    type="image/webp"
  />
  <img
    className="lazy"
    data-src="/image.jpeg"
  />
</picture>
`;

exports[`LazyWebpPicture should require a src prop 1`] = `
"Warning: Failed prop type: The prop \`src\` is marked as required in \`LazyWebpPicture\`, but its value is \`undefined\`.
    in LazyWebpPicture"
`;
